--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -75,7 +75,12 @@ jobs:
             exit 1
           fi
           echo "Verifying contents of $BACKUP_FILE..."
-          docker run --rm pg_backup_image sh -c "pg_restore -d your_database_name -U your_db_user /backup/$BACKUP_FILE && psql -h localhost -U your_db_user -d your_database_name -c 'SELECT * FROM test_table;'"
+          
+          # Restore the backup and verify
+          docker run --rm \
+            -e PGUSER=your_db_user \
+            -e PGPASSWORD=your_db_password \
+            -e PGDATABASE=your_database_name \
+            -e PGHOST=localhost \
+            pg_backup_image sh -c "pg_restore -d your_database_name -U your_db_user /backup/$BACKUP_FILE && psql -h localhost -U your_db_user -d your_database_name -c 'SELECT * FROM test_table;'"
 
-          # Optionally, you can use grep to check specific data
-          docker run --rm pg_backup_image sh -c "pg_restore -d your_database_name -U your_db_user /backup/$BACKUP_FILE && psql -h localhost -U your_db_user -d your_database_name -c 'SELECT * FROM test_table;' | grep 'Test Data'"
