--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -44,6 +44,8 @@ jobs:
             echo "Waiting for PostgreSQL to be ready..."
             sleep 5
           done
+          # Set PGPASSWORD to allow the psql command to connect
+          export PGPASSWORD=your_db_password
           psql -h localhost -U your_db_user -d your_database_name -c "CREATE TABLE test_table (id SERIAL PRIMARY KEY, name VARCHAR(50));"
           psql -h localhost -U your_db_user -d your_database_name -c "INSERT INTO test_table (name) VALUES ('Test Data 1'), ('Test Data 2');"
 
@@ -83,4 +85,3 @@ jobs:
             -e PGDATABASE=your_database_name \
             -e PGHOST=localhost \
             pg_backup_image sh -c "pg_restore -d your_database_name -U your_db_user /backup/$BACKUP_FILE && psql -h localhost -U your_db_user -d your_database_name -c 'SELECT * FROM test_table;'"
-
